tests/fixtures/invalid/extern_in_const.gcl
// error: extern functions are runtime-provided; const expressions are compile-time
import plugin "graphcal:demo" as demo {
    fn lerp<D: Dim>(a: D, b: D, t: Dimensionless) -> D;
}
const node c: Dimensionless = demo.lerp(1.0, 2.0, 0.5);
